Move auth to program

--- a/SiDokter/Views/Shared/_Layout.cshtml
+++ b/SiDokter/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                     </ul>
                 </div>
             </div>
+            <div>
+                <a class="nav-link text-dark mx-4" asp-area="" asp-controller="Auth" asp-action="LogOut">Keluar</a>
+            </div>
         </nav>
     </header>
     <div class="container">
